[package]
name = "flow_command"
version = "0.1.0"
authors = ["Mathieu"]
edition = "2018"


[dependencies]
enigo = "0.0.14"
inputbot = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
global = "0.4.3"
flow_command_json = { path = "../flow_command_json", version = "0.1.0"}

